--- a/public/helper/helper-main.html
+++ b/public/helper/helper-main.html
@@ -8,8 +8,6 @@
     <link rel="shortcut icon" href="#">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -43,8 +41,8 @@
     <h6 class="head-1">Thank you for choosing to help those who need it the most! You made the right choice!</h6>
     <div class="head-2"><img src="../images/ukraine-flag.png"></div>
     <div style="text-align: center; margin-top: 2%;">
-        <button id="help-form-submit" class="btn btn-primary">I WANT TO HELP</button>
-        <button id="fill-profile" class="btn btn-primary">MY PROFILE</button>
+        <button id="help-form-submit" class="btn btn-primary" style="background-color: #3b5998; border-color: #3b5998;">I WANT TO HELP</button>
+        <button id="fill-profile" class="btn btn-primary" style="background-color: #3b5998; border-color: #3b5998;">MY PROFILE</button>
     </div>
     <hr class="my-4">
     <ul class="nav nav-pills mb-3 mt-5" id="pills-tab" role="tablist" style="justify-content: center;">
