--- a/public/refugee/refugee-listing-legal.html
+++ b/public/refugee/refugee-listing-legal.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@400;700&family=Poppins:wght@400;700&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="refugee-listing.css">
+  <link rel="stylesheet" href="refugee-listing-legal.css">
   <!-- update the version number as needed -->
   <script defer src="/__/firebase/9.6.10/firebase-app-compat.js"></script>
   <!-- include only the Firebase features as you need -->
@@ -41,7 +41,7 @@
 <body class="gradient-background">
 
   <div class="container" style="height: 100vh;">
-    <h2 class="head-1">Here's a list of all the awesome people who are offering housing help!</h2>
+    <h2 class="head-1">Here's a list of all the awesome people who are offering legal help!</h2>
     <div class="head-2"><img src="../images/ukraine-flag.png"></div>
     <div id="house-help-listing"></div>
   </div>
@@ -49,7 +49,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script type="module" src="./refugee-listing.js"></script>
+  <script type="module" src="./refugee-listing-legal.js"></script>
 </body>
 
 </html>
