--- a/public/refugee/refugee-main.html
+++ b/public/refugee/refugee-main.html
@@ -9,26 +9,52 @@
     <link rel="shortcut icon" href="#">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@400;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="refugee-main.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
-<body>
+<body class="gradient-background" style="height: 100vh;">
     <div class="container">
-        <h3 class="text-center">Which type of help do you want?</h3>
-        <div class="row pb-2">
-            <button id="fill-profile" type="button" class="btn btn-danger">Profile</button>
+        <h6 class="head-1">It has been tough for you, but we are here to help you transition smoothly into your new
+            peaceful world!</h6>
+        <div class="head-2"><img src="../images/ukraine-flag.png"></div>
+        <div style="text-align: center; margin-top: 2%;">
+            <button id="request-help" class="btn btn-primary" style="background-color: #3b5998; border-color: #3b5998;">I WANT TO POST A HELP</button>
+            <button id="fill-profile" class="btn btn-primary" style="background-color: #3b5998; border-color: #3b5998;">MY PROFILE</button>
+        </div>
+        <hr class="my-4">
+        <h4 class="head-1">How can we help you?</h4>
+        <div class="row pb-2 pt-5">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <button id="refugee-house-help" type="button" class="btn btn-primary" style="width: 100%;background-color: #3b5998; border-color: #3b5998;">I NEED HELP
+                    WITH HOUSING</button>
+            </div>
+            <div class="col-2"></div>
         </div>
         <div class="row pb-2">
-            <button id="request-help" type="button" class="btn btn-danger">Request Help</button>
+            <div class="col-2"></div>
+            <div class="col-8">
+                <button id="refugee-legal-help" type="button" class="btn btn-primary" style="width: 100%;background-color: #3b5998; border-color: #3b5998;">I NEED LEGAL
+                    HELP</button>
+            </div>
+            <div class="col-2"></div>
         </div>
         <div class="row pb-2">
-            <button id="refugee-house-help" type="button" class="btn btn-primary">Household</button>
-        </div>
-        <div class="row pb-2">
-            <button id="refugee-legal-help" type="button" class="btn btn-primary">Legal</button>
-        </div>
-        <div class="row pb-2">
-            <button id="refugee-misc-help" type="button" class="btn btn-primary">Miscellaneous</button>
+            <div class="col-2"></div>
+            <div class="col-8">
+                <button id="refugee-misc-help" type="button" class="btn btn-primary" style="width: 100%;background-color: #3b5998; border-color: #3b5998;">MISCELLANEOUS
+                    HELP</button>
+            </div>
+            <div class="col-2"></div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
